# CMake-tutorial

./: README.md
t1/: CMakeLists.txt  CMakeLists.txt~
t2/: CMakeLists.txt
t2/src/: CMakeLists.txt  main.c
t3/lib/: CMakeLists.txt  CMakeLists.txt~  hello.c
t4/: CMakeLists.txt~
t4/src/: CMakeLists.txt
t5/src/: CMakeLists.txt~  main.c~
t6/: CMakeLists.txt~
t6/cmake/: FindHELLO.cmake~
t6/src/: CMakeLists.txt
